# mimizou-room

./: .gitattributes  .gitignore  Makefile  Pipfile  README.md  cache.json  main.py  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
concepts/linux/: snippets.md
docs/: index.md
docs/IT_Note/: index.md
docs/IT_Note/concepts/: aa.md  emoji.md
docs/IT_Note/concepts/linux/: snippets.md  trouble.md
docs/IT_Note/concepts/regex/: faq.md
docs/IT_Note/languages/autohotkey/: faq.md
docs/Who_am_I/: index.md
docs/concepts/: emoji.md
docs/css/: custom.css
docs/it-note/: index.md
docs/it-note/concepts/: emoji.md
docs/itnote/: index.md
docs/javascript/: embedly.js
docs/languages/haskell/: trouble.md
docs/services/slack/: snippets.md
docs/template/: faq.md  index.md
docs/tools/intellij/: trouble.md
docs/tools/vim/: config.md
languages/bash/: trouble.md
languages/css/: snippets.md
languages/elixir/: grammer.md  index.md
languages/golang/: index.md  trouble.md
languages/haskell/: grammer.md  index.md
languages/python/: index.md  performance.md
languages/python/docopt/: snippets.md
languages/python/pipenv/: snippets.md
languages/python/pylint/: index.md
languages/python/sqlalchemy/: snippets.md
languages/python/yapf/: index.md
languages/typescript/: grammer.md  index.md  performance.md
languages/typescript/element/: trouble.md
languages/typescript/nuxt/: snippets.md  trouble.md
tools/git/: snippets.md
tools/intellij/: trouble.md
tools/vim/: key.md  trouble.md
tools/vscode/: trouble.md
(+235 files in other folders)
