[tool.poetry]
name = "mimizou-room"
version = "0.1.0"
description = ""
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.0"
pygments = "^2.6.1"
mkdocs-macros-plugin = "^0.4.9"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
